# KarlikEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
KarlikEngineCore/: CMakeLists.txt
KarlikEngineCore/include/Coral/: HostInstance.hpp
KarlikEngineCore/lib/: glew32s.lib
KarlikEngineCore/lib/Release/: Coral.Native.lib
KarlikEngineCore/src/: main.cpp  pch.h
KarlikEngineCore/src/Addon/: AddonBase.cpp  AddonBase.h  AddonRegistry.h  BasicAddons.h
KarlikEngineCore/src/Graphics/: GraphicsBase.cpp  GraphicsBase.h  OpenGLGraphics.cpp  OpenGLGraphics.h  SDLWindow.cpp  SDLWindow.h
KarlikEngineCore/src/Graphics/ImGui/: ImGuiAddonBase.cpp  ImGuiAddonBase.h  ImGuiOpenGLAddon.cpp  ImGuiOpenGLAddon.h  ImGuiRenderPart.h
KarlikEngineCore/src/Runtime/: Runtime.cpp  Runtime.h  World.cpp  World.h  WorldObject.cpp  WorldObject.h
KarlikEngineCore/src/Scripting/: DotNetScript.cpp  DotNetScript.h  DotNetScripting.cpp  DotNetScripting.h  Script.cpp  Script.h  Scripting.cpp  Scripting.h
KarlikEngineCore/src/Utils/: UUIDGenerator.h
KarlikEngineEditor/: CMakeLists.txt
KarlikEngineEditor/src/: main.cpp  pch.h
KarlikEngineEditor/src/ImGui/: TestRenderPart.h
KarlikEngineEditor/src/Windows/: EditorWindow.cpp  EditorWindow.h
KarlikEngineScriptingCore/: InternalCalls.cs  KarlikEngineScriptingCore.sln
